Initial updates for Liferay 7.4 extra fixes